--- a/requirements.txt
+++ b/requirements.txt
@@ -9,5 +9,6 @@ requests==2.32.5
 google-auth==2.41.1
 google-auth-httplib2==0.2.0
 google-api-python-client==2.185.0
-psycopg2-binary==2.9.9
+psycopg[binary]
 reportlab
+
